# court-gravity

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
blender/: bake_heightmaps.py
configs/: court_config.json  palette.json
core/: __init__.py  archetypes.py  court.py  export.py  field.py  kde.py  noiseutil.py  trajectories.py
data/storyboard/: DISCLAIMER.txt
manim_video/: NARRATION.md  __init__.py  full_explainer.py  narration_cues.json  render_explainer_preview.py  render_matplotlib.py  scenes.py  storyboard.py
scripts/: build_narration.py  capture_readme_gif.mjs  generate_data.py  parity_check.py  review_explainer_frames.py  sanity_plot.py  ship.py  sync_web_assets.py
tests/: test_field.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/data/: shader_uniforms.json  trajectories.json
web/src/: AboutPage.tsx  App.tsx  CameraRig.tsx  CourtSurface.tsx  Heatmap2D.tsx  Marble.tsx  MotionTrails.tsx  fieldMath.ts  gameSimulation.ts  playerProfiles.ts  shaders.ts  styles.css  useMobileProfile.ts
